login page/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee-app
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: coffee-app
  template:
    metadata:
      labels:
        app: coffee-app
    spec:
      securityContext:
        fsGroup: 1000
      terminationGracePeriodSeconds: 30
      containers:
        - name: coffee-app
          image: shwets-coffee-shop:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: coffee-app-data
              mountPath: /app/backend/data
          readinessProbe:
            httpGet:
              path: /api/shop
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /api/shop
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
      volumes:
        - name: coffee-app-data
          persistentVolumeClaim:
            claimName: coffee-app-data
