login page/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffee-app
spec:
  selector:
    app: coffee-app
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
